// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schema for almostEligible 1`] = `
{
  "eligibleCriteria": {
    "housingUnitTypeIsSolitaryConfinement": {
      "solitaryStartDate": 2021-10-27T00:00:00.000Z,
    },
  },
  "externalId": "RES021",
  "formInformation": {
    "OPT": true,
    "STG": "2",
    "adSegStaysAndReasonsWithin3Years": [
      "(2022-11-07,003,)",
    ],
    "bondableOffensesWithin6Months": "(020, 2024-02-26)",
    "facility": "FACILITY2",
    "lock": "LOCKID3",
    "maxReleaseDate": 2024-06-16T00:00:00.000Z,
    "minReleaseDate": 2023-03-16T00:00:00.000Z,
    "nonbondableOffensesWithin1Year": "(008, 2023-05-31)",
    "prisonerName": "Third Resident",
    "prisonerNumber": "RES021",
    "segregationClassificationDate": 2021-10-27T00:00:00.000Z,
    "segregationType": "TEMPORARY_SOLITARY_CONFINEMENT",
  },
  "ineligibleCriteria": {
    "usMiPastSecurityClassificationCommitteeReviewDate": {
      "facilitySolitaryStartDate": 2021-11-16T00:00:00.000Z,
      "latestSccReviewDate": null,
      "nextSccDate": 2021-12-18T00:00:00.000Z,
      "numberOfExpectedReviews": null,
      "numberOfReviews": null,
    },
  },
  "metadata": {
    "daysInCollapsedSolitarySession": 30,
  },
  "stateCode": "US_MI",
}
`;

exports[`schema for fullyEligible1 1`] = `
{
  "eligibleCriteria": {
    "housingUnitTypeIsSolitaryConfinement": {
      "solitaryStartDate": 2021-11-26T00:00:00.000Z,
    },
    "usMiPastSecurityClassificationCommitteeReviewDate": {
      "facilitySolitaryStartDate": 2021-11-26T00:00:00.000Z,
      "latestSccReviewDate": 2021-12-01T00:00:00.000Z,
      "nextSccDate": 2021-12-21T00:00:00.000Z,
      "numberOfExpectedReviews": null,
      "numberOfReviews": null,
    },
  },
  "externalId": "RES019",
  "formInformation": {
    "OPT": true,
    "STG": "1",
    "adSegStaysAndReasonsWithin3Years": [
      "(2021-11-03,014,)",
      "(2022-03-02,014,)",
      "(2021-08-02,030,)",
      "(2023-10-12,003,014,029,)",
      "(2022-05-16,014,)",
      "(2022-04-30,012,)",
    ],
    "bondableOffensesWithin6Months": "(423, 2023-12-27)",
    "facility": "FACILITY1",
    "lock": "LOCKID1",
    "maxReleaseDate": 2023-08-16T00:00:00.000Z,
    "minReleaseDate": 2022-10-16T00:00:00.000Z,
    "nonbondableOffensesWithin1Year": "(008, 2023-05-31)",
    "prisonerName": "First Resident",
    "prisonerNumber": "RES019",
    "segregationClassificationDate": 2021-11-26T00:00:00.000Z,
    "segregationType": "ADMINISTRATIVE_SOLITARY_CONFINEMENT",
  },
  "ineligibleCriteria": {},
  "metadata": {
    "daysInCollapsedSolitarySession": 25,
  },
  "stateCode": "US_MI",
}
`;

exports[`schema for fullyEligible2 1`] = `
{
  "eligibleCriteria": {
    "housingUnitTypeIsSolitaryConfinement": {
      "solitaryStartDate": 2021-10-27T00:00:00.000Z,
    },
    "usMiPastSecurityClassificationCommitteeReviewDate": {
      "facilitySolitaryStartDate": 2021-11-16T00:00:00.000Z,
      "latestSccReviewDate": null,
      "nextSccDate": 2021-12-18T00:00:00.000Z,
      "numberOfExpectedReviews": 2,
      "numberOfReviews": 1,
    },
  },
  "externalId": "RES020",
  "formInformation": {
    "OPT": false,
    "STG": "2",
    "adSegStaysAndReasonsWithin3Years": [],
    "bondableOffensesWithin6Months": "(020, 2024-02-26), (057, 2023-12-05), (057, 2024-01-31)",
    "facility": "FACILITY2",
    "lock": "LOCKID2",
    "maxReleaseDate": 2024-06-16T00:00:00.000Z,
    "minReleaseDate": 2022-05-16T00:00:00.000Z,
    "nonbondableOffensesWithin1Year": "(008, 2023-05-31)",
    "prisonerName": "Second Resident",
    "prisonerNumber": "RES020",
    "segregationClassificationDate": 2021-10-27T00:00:00.000Z,
    "segregationType": "TEMPORARY_SOLITARY_CONFINEMENT",
  },
  "ineligibleCriteria": {},
  "metadata": {
    "daysInCollapsedSolitarySession": 50,
  },
  "stateCode": "US_MI",
}
`;
